# mathlab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/con/: mod.rs
src/constants/: mod.rs
src/fun/: mod.rs
src/fun/num/: mod.rs
src/fun/num_vec/: mod.rs
src/fun/vec/: mod.rs
src/fun/vec_num/: mod.rs
src/fun/vec_vec/: mod.rs
src/functions/args/: mod.rs
src/functions/num/: mod.rs
src/functions/num_vec/: mod.rs
src/functions/vec/: mod.rs
src/functions/vec_num/: mod.rs
src/functions/vec_vec/: mod.rs
