[package]
name = "mathlab"
version = "0.9.1"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "A Powerful Math Library for Rust"
homepage = "https://github.com/dr-montasir/mathlab"
repository = "https://github.com/dr-montasir/mathlab"
readme = "README.md"
keywords = ["math", "numeric", "vector", "trigonometry", "wasm"]
categories = ["algorithms", "mathematics", "science", "wasm"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
