[package]
name = "mathlab"
version = "1.2.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
# 2024-10-15 version 1.82.0
rust-version = "1.82.0"
description = "A Powerful Math Library for Rust"
homepage = "https://github.com/dr-montasir/mathlab"
repository = "https://github.com/dr-montasir/mathlab"
readme = "README.md"
keywords = ["math", "numeric", "vector", "trigonometry", "wasm"]
categories = ["algorithms", "mathematics", "science", "wasm"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
