[package]
name = "mathlab"
version = "1.4.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "A Powerful Math Library for Rust"
homepage = "https://github.com/dr-montasir/mathlab"
repository = "https://github.com/dr-montasir/mathlab"
readme = "README.md"
keywords = ["math", "numeric", "vector", "trigonometry", "wasm"]
categories = ["algorithms", "mathematics", "science", "wasm"]
license = "MIT OR Apache-2.0"

exclude = ["logo.svg", "playground.md"]

[dependencies]
